// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContextMenu /> Given the component was mounted to the DOM should match snapshot 1`] = `
<ContextMenu
  classes={
    Object {
      "button": "",
      "container": "",
    }
  }
  disabled={false}
  isOpened={null}
  onStateChange={null}
  scroll={null}
  showToggle={true}
>
  <div
    className="css-13azwyo ui-shared__context-menu"
    data-test-id="contextMenu"
  >
    <button
      aria-controls="contextMenuDialog"
      aria-expanded={null}
      aria-haspopup="true"
      aria-label="navigation.open_menu"
      className="css-1jsppqd"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <MoreVert
        aria-hidden={true}
      >
        <Icon
          aria-hidden={true}
          className=""
          color={null}
          content="<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z\\"/>"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb  common__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z\\"/>",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </MoreVert>
    </button>
    <ConnectedReactPortal
      isOpened={null}
    />
  </div>
</ContextMenu>
`;

exports[`<ContextMenu /> Snapshot test should match snapshot 1`] = `
<div
  className="css-13azwyo ui-shared__context-menu"
  data-test-id="contextMenu"
>
  <button
    aria-controls="contextMenuDialog"
    aria-expanded={true}
    aria-haspopup="true"
    aria-label="navigation.open_menu"
    className="css-1jsppqd"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <MoreVert
      aria-hidden={true}
    />
  </button>
  <ConnectedReactPortal
    isOpened={true}
  >
    <FocusTrap
      active={true}
    >
      <div
        className="css-dvvqn2"
      >
        <Backdrop
          className=""
          color="#000"
          duration={200}
          isVisible={true}
          level={0}
          lockBodyScroll={true}
          onClick={[Function]}
          opacity={0}
        />
        <Position
          offset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
        >
          <ContextMenuProvider
            handleMenuToggle={[Function]}
          >
            <div
              aria-modal="true"
              className="css-1uoznzv"
              role="dialog"
              tabIndex="-1"
            >
              <Item
                autoClose={true}
                className="menu-active-item"
                disabled={false}
                onClick={[MockFunction]}
              >
                Item A
              </Item>
              <Item
                autoClose={true}
                className="menu-active-item"
                disabled={false}
                onClick={[MockFunction]}
              >
                Item B
              </Item>
              <button
                aria-label="common.close"
                className="sr-only"
                onClick={[Function]}
                type="button"
              >
                common.close
              </button>
            </div>
          </ContextMenuProvider>
        </Position>
      </div>
    </FocusTrap>
  </ConnectedReactPortal>
</div>
`;

exports[`<ContextMenu /> Snapshot test should match snapshot without toggle 1`] = `
<div
  className="css-13azwyo ui-shared__context-menu"
  data-test-id="contextMenu"
>
  <ConnectedReactPortal
    isOpened={true}
  >
    <FocusTrap
      active={true}
    >
      <div
        className="css-dvvqn2"
      >
        <Backdrop
          className=""
          color="#000"
          duration={200}
          isVisible={true}
          level={0}
          lockBodyScroll={true}
          onClick={[Function]}
          opacity={0}
        />
        <Position
          offset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
        >
          <ContextMenuProvider
            handleMenuToggle={[Function]}
          >
            <div
              aria-modal="true"
              className="css-1uoznzv"
              role="dialog"
              tabIndex="-1"
            >
              <Item
                autoClose={true}
                className="menu-active-item"
                disabled={false}
                onClick={[MockFunction]}
              >
                Item A
              </Item>
              <button
                aria-label="common.close"
                className="sr-only"
                onClick={[Function]}
                type="button"
              >
                common.close
              </button>
            </div>
          </ContextMenuProvider>
        </Position>
      </div>
    </FocusTrap>
  </ConnectedReactPortal>
</div>
`;
